<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"><LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="org.easydarwin.easypusher.SettingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rtsp_group"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/edt_server_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="EasyDarwin地址"
            android:text="114.55.107.180"
            android:textColorHint="#80000000" />

        <EditText
            android:id="@+id/edt_server_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="EasyDarwin端口（默认554）"
            android:text="554"
            android:textColorHint="#80000000" />

        <EditText
            android:id="@+id/edt_stream_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="摄像头直播流ID"
            android:textColorHint="#80000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="注:如果支持屏幕推送,屏幕推送的ID为:'摄像头直播流ID_s'\n比如若摄像头直播流ID为'android_123',那屏幕推送ID就是'android_123_s'" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:text=""
        android:id="@+id/rtmp_url"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/enable_background_camera_pushing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="使能摄像头后台采集" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="8dp"
        android:text="EasyPusher默认使用硬编码推送视频。如果需要测试软编码，请勾选下面的单选框" />
    <CheckBox
        android:id="@+id/use_x264_encode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="使用软编码" />

    <CheckBox
        android:id="@+id/enable_video_overlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="叠加水印" />

    <CheckBox
        android:id="@+id/only_push_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="仅推送音频" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onOpenLocalRecord"
        android:text="打开录像文件夹"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="保存" />

</LinearLayout></ScrollView>

