<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.easydarwin.easypusher.StreamActivity">

    <TextureView
        android:id="@+id/sv_surfaceview"
        android:keepScreenOn="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:id="@+id/res_container"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_res"
            android:text="分辨率："
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:onClick="onClickResolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_toRightOf="@+id/txt_res"
            android:layout_alignTop="@+id/txt_res"
            android:id="@+id/spn_resolution"
            android:background="#00ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="#fff"
        android:id="@+id/stream_stat"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/res_container"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true">

        <TextView
            android:layout_width="wrap_content"
            android:text="00:00"
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:textColor="#FF0000"
            android:drawableLeft="@drawable/recording_marker_shape"
            android:drawablePadding="5dp"
            android:visibility="gone"
            android:id="@+id/tv_start_record"
            android:gravity="center_vertical"
            android:layout_height="wrap_content" />

        <ImageButton
            android:layout_width="wrap_content"
            android:src="@drawable/ic_action_record"
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:id="@+id/btn_record"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:textAlignment="@id/txt_res"
            android:onClick="onRecord"
            android:layout_height="wrap_content" />
        <ImageButton
            android:layout_width="wrap_content"
            android:src="@drawable/ic_action_switch_camera"
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:id="@+id/btn_switchCamera"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:textAlignment="@id/txt_res"
            android:onClick="onClick"
            android:layout_height="wrap_content" />
        <ImageButton
            android:layout_width="wrap_content"
            android:src="@drawable/ic_action_about"
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:id="@+id/toolbar_about"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:textAlignment="@id/txt_res"
            android:onClick="onAbut"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/option_bar_container"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="推送"
                android:background="@drawable/button_selector"
                android:textColor="#ffffff" />
            <Button
                android:id="@+id/push_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_alignParentBottom="true"
                android:onClick="onPushScreen"
                android:text="推送屏幕"
                android:background="@drawable/button_selector"
                android:textColor="#ffffff" />
            <Button
                android:id="@+id/btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/btn_switch"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button_selector"
                android:text="设置"
                android:visibility="visible"
                android:textColor="#ffffff" />
            <Button
                android:id="@+id/btn_audio"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/btn_record"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button_selector"
                android:text="静音"
                android:textColor="#ffffff" />
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/txt_stream_address"
        android:textColor="#ff0000"
        android:layout_above="@+id/option_bar_container"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/push_screen_url"
        android:textColor="#ff0000"
        android:layout_above="@+id/txt_stream_address"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txt_stream_status"
        android:textColor="#ff0000"
        android:layout_above="@+id/push_screen_url"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>